[gd_scene load_steps=4 format=3 uid="uid://n3ool22g32eh"]

[ext_resource type="Script" path="res://HUD/HUD.gd" id="1_f7sk4"]
[ext_resource type="FontFile" uid="uid://coloo8nouqxhv" path="res://fonts/Xolonium-Regular.ttf" id="2_3bxhs"]
[ext_resource type="Texture2D" uid="uid://dc73gf52qurkm" path="res://HUD/Start_Button.png" id="3_xddrv"]

[node name="HUd" type="CanvasLayer"]
script = ExtResource("1_f7sk4")

[node name="Score_Label" type="Label" parent="."]
offset_left = 552.0
offset_top = 8.0
offset_right = 612.0
offset_bottom = 105.0
theme_override_fonts/font = ExtResource("2_3bxhs")
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title_Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.0
offset_top = -139.0
offset_right = 313.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_3bxhs")
theme_override_font_sizes/font_size = 100
text = "炸弹人rogue"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Wave_Number_Label" type="Label" parent="."]
offset_left = 34.0
offset_top = 28.0
offset_right = 144.0
offset_bottom = 103.0

[node name="Start_button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -249.0
offset_top = -229.0
offset_right = 249.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_3bxhs")
theme_override_font_sizes/font_size = 75
text = "开始"
icon = ExtResource("3_xddrv")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Title_Label_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Start_button" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="Title_Label_Timer" to="." method="_on_title_label_timer_timeout"]
